Add Gradle build system, fix CPU/GFX/memory/timer bugs, and overhaul UI
Migrate from manual compilation to Gradle with run/debug/debugger tasks.
Fix ARM and THUMB instruction handling (data processing, loads/stores,
SWI). Rewrite graphics pipeline for correct mode 0-2 rendering, affine
transforms, and window/blend effects. Improve DMA transfer accuracy,
save memory (Flash/EEPROM), and IO register behavior. Expand UI with
built-in debugger, dump capture, and input handling. Add logging and
memory write watch utilities. Rebrand project to BooYahGBA and update
README with current status and credits.